笔记更新